sites/docs/src/content/api_reference/1.13.3/api/index.md
# API Reference

# Tests:

- [nf_core.bump_version](bump_version)
  - [`bump_nextflow_version()`](bump_version#nf_core.bump_version.bump_nextflow_version)
  - [`bump_pipeline_version()`](bump_version#nf_core.bump_version.bump_pipeline_version)
  - [`update_file_version()`](bump_version#nf_core.bump_version.update_file_version)
- [nf_core.create](create)
  - [`PipelineCreate`](create#nf_core.create.PipelineCreate)
- [nf_core.download](download)
  - [`DownloadProgress`](download#nf_core.download.DownloadProgress)
  - [`DownloadWorkflow`](download#nf_core.download.DownloadWorkflow)
- [nf_core.launch](launch)
  - [`Launch`](launch#nf_core.launch.Launch)
- [nf_core.licences](licences)
  - [`WorkflowLicences`](licences#nf_core.licences.WorkflowLicences)
- [nf_core.lint](lint)
  - [`run_linting()`](lint#nf_core.lint.run_linting)
  - [`PipelineLint`](lint#nf_core.lint.PipelineLint)
- [nf_core.list](list)
  - [`LocalWorkflow`](list#nf_core.list.LocalWorkflow)
  - [`RemoteWorkflow`](list#nf_core.list.RemoteWorkflow)
  - [`Workflows`](list#nf_core.list.Workflows)
  - [`get_local_wf()`](list#nf_core.list.get_local_wf)
  - [`list_workflows()`](list#nf_core.list.list_workflows)
  - [`pretty_date()`](list#nf_core.list.pretty_date)
- [nf_core.modules](modules)
- [nf_core.schema](schema)
  - [`PipelineSchema`](schema#nf_core.schema.PipelineSchema)
- [nf_core.sync](sync)
  - [`PipelineSync`](sync#nf_core.sync.PipelineSync)
  - [`PullRequestException`](sync#nf_core.sync.PullRequestException)
  - [`SyncException`](sync#nf_core.sync.SyncException)
- [nf_core.utils](utils)
  - [`Pipeline`](utils#nf_core.utils.Pipeline)
  - [`anaconda_package()`](utils#nf_core.utils.anaconda_package)
  - [`check_if_outdated()`](utils#nf_core.utils.check_if_outdated)
  - [`custom_yaml_dumper()`](utils#nf_core.utils.custom_yaml_dumper)
  - [`fetch_wf_config()`](utils#nf_core.utils.fetch_wf_config)
  - [`get_biocontainer_tag()`](utils#nf_core.utils.get_biocontainer_tag)
  - [`github_api_auto_auth()`](utils#nf_core.utils.github_api_auto_auth)
  - [`nextflow_cmd()`](utils#nf_core.utils.nextflow_cmd)
  - [`parse_anaconda_licence()`](utils#nf_core.utils.parse_anaconda_licence)
  - [`pip_package()`](utils#nf_core.utils.pip_package)
  - [`poll_nfcore_web_api()`](utils#nf_core.utils.poll_nfcore_web_api)
  - [`rich_force_colors()`](utils#nf_core.utils.rich_force_colors)
  - [`setup_requests_cachedir()`](utils#nf_core.utils.setup_requests_cachedir)
  - [`wait_cli_function()`](utils#nf_core.utils.wait_cli_function)
